--- a/student-profiles/src/App.scss
+++ b/student-profiles/src/App.scss
@@ -1,5 +1,12 @@
+@import "./variables.scss";
+
 .App {
   text-align: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  background-color: $grey;
 }
 
 .App-logo {
@@ -36,3 +43,28 @@
     transform: rotate(360deg);
   }
 }
+
+    /* width */
+    ::-webkit-scrollbar {
+      width: 2px;
+      height: 98%;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 3px;
+    }
+    
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 3px;
+  
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
