--- a/student-profiles/src/index.scss
+++ b/student-profiles/src/index.scss
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, #root, body{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+  font-family: 'Raleway', sans-serif;
+}
