expand feature added

--- a/student-profiles/src/CircleImage/circleImage.scss
+++ b/student-profiles/src/CircleImage/circleImage.scss
@@ -2,7 +2,7 @@
 
 .image-wrapper{
     display: flex;
-    align-items: center;
+    //align-items: center;
     img{
         width: 130px;
         height: 130px;
