--- a/student-profiles/src/ProfileInfoCard/profileInfoCard.scss
+++ b/student-profiles/src/ProfileInfoCard/profileInfoCard.scss
@@ -15,12 +15,13 @@
         display: flex;
         flex-direction: column;
         flex: 1;
-        margin-left: 20px;
+        margin-left: 40px;
         //align-self: center;
 
         .header-wrapper{
             display: flex;
             justify-content: space-between;
+            margin-left: -20px;
         
             .card-header{
                 display: flex;
@@ -29,11 +30,37 @@
                 text-align: start;
                 margin-bottom: 10px;
             }
+
+            .expand-button{
+                font-size: 40px;
+                color: $dark-grey;
+                background: unset;
+                border: unset;
+                width: 0px;
+                height: 0px;
+                display: flex;
+                justify-content: center;
+                align-content: center;
+
+                &.expanded{
+                    margin-top: -5px;
+                }
+            }
         }
 
         .card-info{
             text-align: start;
-            margin-left: 20px;
+        }
+
+        .tags-wrapper{
+            margin-top: 16px;
+            display: flex;
+            width: 80%;
+            flex-flow: wrap;
+        }
+
+        .app-input{
+            width: 150px;
         }
     }
     
@@ -44,7 +71,6 @@
 
         margin-top: 16px;
         align-items: start;
-        margin-left: 20px;
     }
     
 }
